k8s/infrastructure/monitoring/portainer/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  namespace: portainer
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-talmox-hera-home-karlsen-fr}
  hostnames:
    - portainer.talmox.hera.home.karlsen.fr
  rules:
    - matches: [path: {type: PathPrefix, value: /}]
      backendRefs: [{name: portainer, kind: Service, port: 9000}]
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              # - {name: Access-Control-Allow-Origin, value: '*'}
              # - {name: Content-Security-Policy, value: "default-src 'none'; frame-ancestors 'none'; form-action 'none'; base-uri 'none';"}  # Already set by application
              - {name: Strict-Transport-Security, value: 'max-age=31536000; includeSubDomains; preload'}
              # - {name: X-Content-Type-Options, value: nosniff}  # Already set by application
              - {name: X-Frame-Options, value: DENY}
              - {name: Cross-Origin-Resource-Policy, value: same-origin}
              - {name: Cross-Origin-Embedder-Policy, value: require-corp}
              - {name: Cross-Origin-Opener-Policy, value: same-origin}
              - {name: Referrer-Policy, value: no-referrer}
              # - {name: Permissions-Policy, value: 'accelerometer=(), autoplay=(), camera=(), encrypted-media=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()'}  # Already set by application
              - {name: Integrity-Policy, value: 'blocked-destinations=(style),sources=(inline)'}
              # - {name: Reporting-Endpoints, value: ''}
